Archive2/9c/84f3f6ce7b5bc2/output
main.cpp: In function 'int* test(int&)':
main.cpp:7:27: error: invalid type argument of unary '*' (have 'int')
 int* test(int &i){return *i;}
                           ^
main.cpp:7:29: warning: control reaches end of non-void function [-Wreturn-type]
 int* test(int &i){return *i;}
                             ^
